force-app/main/default/objects/Lead/fields/Cal1__c.field-meta.xml
<CustomField>
    <fullName>Cal1__c</fullName>
    <label>Cal1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>