force-app/main/default/objects/Lead/fields/Cal2__c.field-meta.xml
<CustomField>
    <fullName>Cal2__c</fullName>
    <label>Cal2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>