force-app/main/default/objects/Lead/fields/Calle_1__c.field-meta.xml
<CustomField>
    <fullName>Calle_1__c</fullName>
    <label>Calle 1</label>
    <type>TextArea</type>
</CustomField>