force-app/main/default/objects/Lead/fields/Calle_2__c.field-meta.xml
<CustomField>
    <fullName>Calle_2__c</fullName>
    <label>Calle 2</label>
    <type>TextArea</type>
</CustomField>