force-app/main/default/objects/Lead/fields/Calle__c.field-meta.xml
<CustomField>
    <fullName>Calle__c</fullName>
    <label>Calle</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>