force-app/main/default/objects/Lead/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canal</label>
    <referenceTo>Canal__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>