force-app/main/default/objects/Lead/fields/Catalogo_de_Plaza__c.field-meta.xml
<CustomField>
    <fullName>Catalogo_de_Plaza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalogo de Plaza</label>
    <referenceTo>Catalogo_de_Plaza__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>