force-app/main/default/objects/Lead/fields/Colonia__c.field-meta.xml
<CustomField>
    <fullName>Colonia__c</fullName>
    <label>Colonia</label>
    <type>TextArea</type>
</CustomField>