force-app/main/default/objects/Lead/fields/Delegacion__c.field-meta.xml
<CustomField>
    <fullName>Delegacion__c</fullName>
    <label>Delegacion</label>
    <type>TextArea</type>
</CustomField>