force-app/main/default/objects/Lead/fields/Empleado__c.field-meta.xml
<CustomField>
    <fullName>Empleado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empleado</label>
    <referenceTo>Empleado__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>