force-app/main/default/objects/Lead/fields/Foto__c.field-meta.xml
<CustomField>
    <fullName>Foto__c</fullName>
    <label>Foto</label>
    <length>250</length>
    <type>Text</type>
</CustomField>