force-app/main/default/objects/Lead/fields/Medio_por_el_cual_se_entero__c.field-meta.xml
<CustomField>
    <fullName>Medio_por_el_cual_se_entero__c</fullName>
    <label>Medio por el cual se entero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Periodico</fullName>
            </value>
            <value>
                <fullName>Redes Sociales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>