force-app/main/default/objects/Lead/fields/Numero_exterior__c.field-meta.xml
<CustomField>
    <fullName>Numero_exterior__c</fullName>
    <label>Numero exterior</label>
    <type>TextArea</type>
</CustomField>