force-app/main/default/objects/Lead/fields/Numero_interior__c.field-meta.xml
<CustomField>
    <fullName>Numero_interior__c</fullName>
    <label>Numero interior</label>
    <type>TextArea</type>
</CustomField>