force-app/main/default/objects/Lead/fields/Otro_Correo_Electronico__c.field-meta.xml
<CustomField>
    <fullName>Otro_Correo_Electronico__c</fullName>
    <label>Otro Correo Electronico</label>
    <type>Email</type>
</CustomField>