force-app/main/default/objects/Lead/fields/Otro_Telefono__c.field-meta.xml
<CustomField>
    <fullName>Otro_Telefono__c</fullName>
    <label>Otro Telefono</label>
    <type>Phone</type>
</CustomField>