force-app/main/default/objects/Lead/fields/Referencias_Urbanas__c.field-meta.xml
<CustomField>
    <fullName>Referencias_Urbanas__c</fullName>
    <label>Referencias Urbanas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>