force-app/main/default/objects/Lead/fields/Subcanal__c.field-meta.xml
<CustomField>
    <fullName>Subcanal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subcanal</label>
    <referenceTo>Subcanal__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>