force-app/main/default/objects/Lead/fields/Tipo_de_Moneda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Moneda__c</fullName>
    <label>Tipo de Moneda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peso</fullName>
            </value>
            <value>
                <fullName>Dolar</fullName>
            </value>
            <value>
                <fullName>Euro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>