force-app/main/default/objects/Lead/fields/Tipo_de_persona__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_persona__c</fullName>
    <label>Tipo de persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fisica</fullName>
            </value>
            <value>
                <fullName>Moral</fullName>
            </value>
            <value>
                <fullName>Fisica con actividad empresarial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>